# starengine

./: .gitignore  .gitmodules  CMakeLists.txt  initsubmodules.sh  pullmodules.sh  pushmodules.sh
project/: StarEngineSolution.sln
starutils/include/StarUtils/: StarSingleton.h
